--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,6 +16,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 
 input, textarea, button {
@@ -66,4 +67,16 @@ button {
 .highlight {
   background-color: #2ECC71; /* Light green color for highlighted category */
   color: white;
+}
+
+.language-selection {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.language-selection input[type="radio"] {
+  margin-left: 5px;
 }
